--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
 <title>
 DCIV SP17
@@ -6,8 +6,10 @@ DCIV SP17
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h1>
-Hello World!
-</h1>
+  <div id="cover">
+			<h1 class="em">
+				My DCIV Webpage
+			</h1>
+	</div>
 </body>
 </html>
